# Project_BitShift

./: .gitignore  CLA.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: architecture.md  authentication.md  customer-requirements-specification.md  functional-specification.md
docs/api/openapi/api/: openapi.yaml
infrastructure/docker/: .env.dev  .env.example  compose.dev.yaml  compose.prod.yaml  docker-compose.dev.yaml  docker-compose.prod.yaml  up.sh
infrastructure/docker/traefik/: traefik.dev.yaml
services/api/: pyproject.toml
services/api/alembic/versions/: 0002_workflows.py  0003_planning_domain.py
services/api/app/: cli.py  config.py  deps.py  main.py  permissions.py  schemas.py
services/api/app/models/: __init__.py  audit.py  calendar.py  enums.py  leave.py  mixins.py  organization.py  preference.py  project.py  shift.py  user.py  workflow.py
services/api/app/routers/: audit.py  auth.py  calendar.py  delegates.py  exports.py  leave.py  organization.py  preferences.py  projects.py  reports.py  shifts.py  users.py  workflows.py
services/api/app/services/: audit.py  delegate.py  ics.py  leave.py  notifications.py  shift.py
services/api/tests/: conftest.py  test_audit_hash.py  test_enums.py  test_ics.py  test_leave_state.py  test_permissions.py  test_shift_scheduling.py
services/frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
services/frontend/src/: App.tsx  main.tsx  styles.css
services/worker/app/: config.py  main.py  notify.py
(+19 files in other folders)
